# CodingAgentSupport

./: .gitignore  PROJECT_PROPOSAL.md  README.md  environment.yml  pyproject.toml
docs/: CONSTRUCT_HARDENING_STATUS.md  DISCUSSION_2026-07-09.md  E1_C2XC3_ANALYSIS_PLAN.md  EXPERIMENT_CONFIGS.md  EXPERIMENT_PLAN_2026-07-21.md  FILE_INDEX.md  HANDOFF.md  MODEL_FREEZE_QWEN3_CODER_E1.md  PROTOCOL_0.3.1_FREEZE.md  SESSION_CONTEXT_2026-07-21.md  experiment_protocol.md  run_directory_spec.md
results/: ablation01.jsonl  ablation02.jsonl  ablation02_analysis.json  ablation02_analysis.md  exp009a_c6t50.jsonl  exp009a_t25.jsonl  exp009a_t25_reeval.jsonl  exp010_c2xc3.jsonl  exp010_c2xc3_corrected_summary.json  exp010_c2xc3_reeval.jsonl  exp010_c2xc3_sanitized.jsonl  exp010_summary.json  exp013_d0qual.jsonl  exp015_e1_c2xc3_qwen_openweight.jsonl  exp015_e1_c2xc3_summary.json  feasib01.jsonl  formal01.jsonl  pilot01.jsonl  support_contamination_audit.jsonl
schemas/: agent_run_result.schema.json  eval_result.schema.json  manipulation_check.schema.json  patch_quality_card.schema.json  run_spec.schema.json  task_spec.schema.json
scripts/: analyze.py  audit_support_contamination.py  build_e1_cohort.py  freeze_helpers.py  freeze_repo_memory.py  reeval_sanitized.py  run_feasibility.py  run_pilot.py
tests/: test_analysis.py  test_bundle.py  test_context_v2.py  test_gate_policy.py  test_harness.py  test_importer.py  test_integrity.py  test_isolation.py  test_llm_agent.py  test_memory_v2.py  test_pipeline.py  test_quality_card.py  test_repro_tests.py  test_run_dir.py  test_scheduler.py  (+2 more)
(+167 files in other folders)
